--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
                 <div class="col-lg-6">
                     <!-- form fields -->
-                    <form>
+                    <form action="https://formsubmit.co/zfarhsa18@gmail.com" method="POST">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" id="name">
                         <input type="email" class="form-control mt-3" placeholder="Email" id="email">
                         <input type="text" class="form-control mt-3" placeholder="Subject" id="subject">
@@ -397,7 +397,7 @@
                                 placeholder="Project Details"></textarea>
                         </div>
                     </form>
-                    <button type="button" class="btn btn-success mt-3 btn-contact">Contact Me</button>
+                    <button type="submit" class="btn btn-success mt-3 btn-contact">Contact Me</button>
                 </div>
             </div>
         </div>
