--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <!-- form fields -->
                     <form action="https://formsubmit.co/zfarhsa18@gmail.com" method="POST">
                         <input type="text" class="form-control form-control-lg" placeholder="Name" id="name">
-                        <input type="email" class="form-control mt-3" placeholder="Email" id="email">
+                        <input type="email" class="form-control mt-3" placeholder="Email" id="email" name="email">
                         <input type="text" class="form-control mt-3" placeholder="Subject" id="subject">
                         <div class="mb-3 mt-3">
                             <textarea class="form-control" rows="5" id="comment" name="text"
