--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
                 <div class="col-lg-6">
                     <!-- form fields -->
                     <form action="https://formsubmit.co/zfarhsa18@gmail.com" method="POST">
-                        <input type="text" class="form-control form-control-lg" placeholder="Name" id="name">
+                        <input type="text" class="form-control form-control-lg" placeholder="Name" id="name" name="name">
                         <input type="email" class="form-control mt-3" placeholder="Email" id="email" name="email">
-                        <input type="text" class="form-control mt-3" placeholder="Subject" id="subject">
+                        <input type="text" class="form-control mt-3" placeholder="Subject" id="subject" name="subject">
                         <div class="mb-3 mt-3">
                             <textarea class="form-control" rows="5" id="comment" name="text"
                                 placeholder="Project Details"></textarea>
